--- a/Siv3DRuby/Siv3DRuby.vcxproj
+++ b/Siv3DRuby/Siv3DRuby.vcxproj
@@ -164,6 +164,35 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="mruby\src\array.c" />
+    <ClCompile Include="mruby\src\backtrace.c" />
+    <ClCompile Include="mruby\src\class.c" />
+    <ClCompile Include="mruby\src\codedump.c" />
+    <ClCompile Include="mruby\src\compar.c" />
+    <ClCompile Include="mruby\src\crc.c" />
+    <ClCompile Include="mruby\src\debug.c" />
+    <ClCompile Include="mruby\src\dump.c" />
+    <ClCompile Include="mruby\src\enum.c" />
+    <ClCompile Include="mruby\src\error.c" />
+    <ClCompile Include="mruby\src\etc.c" />
+    <ClCompile Include="mruby\src\fmt_fp.c" />
+    <ClCompile Include="mruby\src\gc.c" />
+    <ClCompile Include="mruby\src\hash.c" />
+    <ClCompile Include="mruby\src\init.c" />
+    <ClCompile Include="mruby\src\kernel.c" />
+    <ClCompile Include="mruby\src\load.c" />
+    <ClCompile Include="mruby\src\numeric.c" />
+    <ClCompile Include="mruby\src\object.c" />
+    <ClCompile Include="mruby\src\pool.c" />
+    <ClCompile Include="mruby\src\print.c" />
+    <ClCompile Include="mruby\src\proc.c" />
+    <ClCompile Include="mruby\src\range.c" />
+    <ClCompile Include="mruby\src\state.c" />
+    <ClCompile Include="mruby\src\string.c" />
+    <ClCompile Include="mruby\src\symbol.c" />
+    <ClCompile Include="mruby\src\variable.c" />
+    <ClCompile Include="mruby\src\version.c" />
+    <ClCompile Include="mruby\src\vm.c" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
@@ -276,6 +305,11 @@
   </ItemGroup>
   <ItemGroup>
     <Font Include="Example\YomogiFont.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mruby\src\error.h" />
+    <ClInclude Include="mruby\src\opcode.h" />
+    <ClInclude Include="mruby\src\value_array.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
