--- a/Siv3DRuby/Siv3DRuby.vcxproj
+++ b/Siv3DRuby/Siv3DRuby.vcxproj
@@ -99,7 +99,7 @@
       <SDLCheck>true</SDLCheck>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir)\mruby\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\mruby\include;$(ProjectDir)\mruby\mrbgems\mruby-compiler\core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -164,6 +164,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="mruby\mrbgems\mruby-compiler\core\codegen.c" />
+    <ClCompile Include="mruby\mrbgems\mruby-compiler\core\y.tab.c" />
     <ClCompile Include="mruby\src\array.c" />
     <ClCompile Include="mruby\src\backtrace.c" />
     <ClCompile Include="mruby\src\class.c" />
