--- a/Siv3DRuby/Siv3DRuby.vcxproj.filters
+++ b/Siv3DRuby/Siv3DRuby.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="mruby\mrbgems\mruby-compiler\core\y.tab.c">
       <Filter>ソース ファイル\mruby-compiler</Filter>
     </ClCompile>
+    <ClCompile Include="mrb_misc.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
