--- a/Siv3DRuby/Siv3DRuby.vcxproj
+++ b/Siv3DRuby/Siv3DRuby.vcxproj
@@ -164,9 +164,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MrbMisc.cpp" />
     <ClCompile Include="MrbPoint.cpp" />
     <ClCompile Include="mrb_circle.cpp" />
-    <ClCompile Include="mrb_misc.cpp" />
     <ClCompile Include="mruby\mrbgems\mruby-compiler\core\codegen.c" />
     <ClCompile Include="mruby\mrbgems\mruby-compiler\core\y.tab.c" />
     <ClCompile Include="mruby\src\array.c" />
