--- a/Siv3DRuby/Siv3DRuby.vcxproj
+++ b/Siv3DRuby/Siv3DRuby.vcxproj
@@ -167,6 +167,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MrbFont.cpp" />
     <ClCompile Include="MrbMisc.cpp" />
     <ClCompile Include="MrbPoint.cpp" />
     <ClCompile Include="mrb_circle.cpp" />
