--- a/Siv3DRuby/Siv3DRuby.vcxproj.filters
+++ b/Siv3DRuby/Siv3DRuby.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClCompile Include="MrbMisc.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="MrbFont.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
